# lrr-hardware-interface

docker/: docker-compose.yml  ros_workspace.Dockerfile
little_red_rover/: CMakeLists.txt  package.xml
little_red_rover/little_red_rover/: drive_base_peripheral.py  hal.py  imu_peripheral.py  lidar_peripheral.py  rover_connection.py
little_red_rover/little_red_rover/pb/: messages.proto  messages_pb2.py  messages_pb2.pyi
lrr_base/: CMakeLists.txt  package.xml
lrr_base/include/lrr_base/: lrr_hardware.h
lrr_base/proto/: CMakeLists.txt  messages.proto
lrr_base/src/: lrr_base.cc  lrr_hardware.cc
lrr_control/: CMakeLists.txt  package.xml
lrr_demos/: CMakeLists.txt  package.xml
lrr_description/: CMakeLists.txt  package.xml
lrr_viz/: CMakeLists.txt  package.xml
